take a deep breath

--- a/kooplexhub/container/templates/attachment_partial_list.html
+++ b/kooplexhub/container/templates/attachment_partial_list.html
@@ -1,4 +1,4 @@
-<div class="card bg-light border-danger shadow mb-3">
+<div class="card bg-light border-danger shadow mb-3 search" id="{{ attachment.name  }}">
   <div class="card-header">
     <div class="row">
       <div class="col-2">
