--- a/kooplexhub/container/templates/attachment_list.html
+++ b/kooplexhub/container/templates/attachment_list.html
@@ -1,12 +1,70 @@
 {% extends "layout.html" %}
 
+{% load static %}
+{% block chardinhelp %}
+<link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
+<script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
+<script>
+   (function() {
+     $(function() {
+       $('body').chardinJs({
+         'attribute': 'data-intro',
+         url: "{% static 'chardinjs/helpattachment_env.json' %}"
+       });
+   
+       // or trigger via an anchor tag
+       $('a[data-toggle="chardinjs"]').on('click', function (e) {
+         e.preventDefault();
+         $("div.envcard:first").find(".collapse").addClass('show');
+         return ($('body').data('chardinJs')).toggle();
+       });
+   
+         return $('body').on('chardinJs:stop', function () {
+         //$("div.envcard:first").find(".collapse").removeClass('show');
+
+       });
+
+     });
+   }).call(this);
+</script>
+{% endblock %}
+
 {% block submenu %}
-  {% include 'container_submenu.html' with title="List of attachments" submenu="attachments" %}
+  {% include 'container_submenu.html' with title="Environments" submenu="attachments" %}
 {% endblock %}
 
 {% block main_content_right %}
     <div class="row">
-      <div class="col-2">
+
+<script>
+  function myFunction() {
+      var input, filter, ul, li, a, i, txtValue;
+      input = document.getElementById("myInput");
+      filter = input.value.toUpperCase();
+      ul = document.getElementById("containerListPane");
+      li = ul.getElementsByTagName("div");
+      for (i = 0; i < li.length; i++) {
+  a = li[i]; 
+  atag = li[i].getAttribute("class");   
+  if (atag.indexOf("search") > -1) {
+    //console.log(a);
+    txtValue = a.id;
+                      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                          li[i].style.display = "";
+                      } else {
+                          li[i].style.display = "none";
+                      }
+  }
+      }
+  }
+</script>
+
+
+
+<input class="form-control me-2 mb-3 mt-3" style="margin-left: 10px;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search attachment" title="Type in a name" autofocus data-intro="#search_list">
+
+
+      <div class="col-2" data-intro="#list_attachments">
       <strong>Attachment name</strong>
       </div>
       <div class="col-2">
@@ -16,19 +74,16 @@
         <strong>Description </strong>
       </div>
     </div>
+
+
+<div id="containerListPane">
   {% for attachment in attachments %}
     {% include 'attachment_partial_list.html' %}
   {% endfor %}
+</div>    
+
 {% endblock %}
 
 {% block main_content_left %}
   {#% include 'container/hint_list.html' %#}
-{% endblock %}
-
-{% block navsearch %}
-<form class="d-flex" action="{% url 'container:list_attachments' %}" method="get">
-  {#% csrf_token %#}
-  <input class="form-control me-2" type="search" name="attachment" placeholder="Search attachments" value="{{ user.profile.search_attachment_list }}" aria-label="Search">
-  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
-</form>
 {% endblock %}
