--- a/kooplexhub/container/templates/container_list.html
+++ b/kooplexhub/container/templates/container_list.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
     {% load static %}
+
     {% block chardinhelp %}
     <link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
     <script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
@@ -27,52 +28,78 @@
          });
        }).call(this);
     </script>
-    {% endblock %}
 
+<script>
+  function myFunction() {
+      var input, filter, ul, li, a, i, txtValue;
+      input = document.getElementById("myInput");
+      filter = input.value.toUpperCase();
+      ul = document.getElementById("containerListPane");
+      li = ul.getElementsByTagName("div");
+      for (i = 0; i < li.length; i++) {
+  a = li[i]; 
+  atag = li[i].getAttribute("class");   
+  if (atag.indexOf("search") > -1) {
+    //console.log(a);
+    txtValue = a.id;
+                      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                          li[i].style.display = "";
+                      } else {
+                          li[i].style.display = "none";
+                      }
+  }
+      }
+  }
+</script>
+
+    {% endblock %}
 {% block submenu %}
-  {% include 'container_submenu.html' with title="List of your service environments" submenu="list" %}
+  {% include 'container_submenu.html' with title="Environments" submenu="list" %}
 {% endblock %}
 
 {% block main_content_right %}
 
+
+
+
+<input class="form-control me-2 mb-3 mt-3" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search environments" title="Type in a name" autofocus>
+  
 {% if user.profile.layout_container_list %}
 <div id="containerListPane" data-intro="#container_list" >
-	<input type="hidden" id="shown_containers" name="shown_containers" value=""> 
   {% for container in containers %}
      {% include 'container_partial_list.html' %}
   {% endfor %}
 </div>
 {% else %}
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<div id="containerListPane" class="row row-cols-1 row-cols-md-3 g-4" data-intro="#container_list">
   {% for container in containers %}
      {% include 'container_partial_card.html' %}
   {% endfor %}
 </div>
 {% endif %}
 
-{% include 'pager.html' %}
 
-	<script>
+  <script>
 
 $( document ).ready(function() {
-      	var hid_shw = $( "#shown_containers" )
-	var c_val = $.cookie("show_container")
-	if (c_val) {
-		c_val = c_val.replaceAll('\\054', ',')
-		console.log( c_val )
-		$.removeCookie("show_container", { 'path': '/' })
-      		hid_shw.val( c_val )
-	} else {
-		console.log( "show container cookie entry missing" )
-      		hid_shw.val( JSON.stringify([]) )
-	}
+        var hid_shw = $( "#shown_containers" )
+  var c_val = $.cookie("show_container")
+  if (c_val) {
+    c_val = c_val.replaceAll('\\054', ',')
+    console.log( c_val )
+    $.removeCookie("show_container", { 'path': '/' })
+          hid_shw.val( c_val )
+  } else {
+    console.log( "show container cookie entry missing" )
+          hid_shw.val( JSON.stringify([]) )
+  }
 });
 
 $(".btn").on("click", function () {
-	var shown = $( "#shown_containers" ).val()
-	console.log( "shown: " + shown )
-	$.cookie("show_container", shown, { 'path': '/' })
-	return true
+  var shown = $( "#shown_containers" ).val()
+  console.log( "shown: " + shown )
+  $.cookie("show_container", shown, { 'path': '/' })
+  return true
 })
 
 function onlyUnique(value, index, self) {
@@ -88,7 +115,7 @@ $("#containerListPane div div div").on("click", function () {
       console.log( "before: " + shw )
       var tgl_id = parseInt( $( this ).attr("data-bs-target").split('-')[1] )
       if (collapsed) {
-	  const index = shw.indexOf(tgl_id);
+    const index = shw.indexOf(tgl_id);
           if (index > -1) {
               shw.splice(index, 1);
           }
@@ -100,17 +127,9 @@ $("#containerListPane div div div").on("click", function () {
       hid_shw.val( JSON.stringify(shw) )
     }
 })
-	</script>
+  </script>
 {% endblock %}
 
 {% block main_content_left %}
   {#% include 'container/hint_list.html' %#}
-{% endblock %}
-
-{% block navsearch %}
-<form class="d-flex" action="{% url 'container:list' %}" method="get">
-  {#% csrf_token %#}
-  <input class="form-control me-2" type="search" name="container" placeholder="Search environment" value="{{ user.profile.search_container_list }}" aria-label="Search">
-  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
-</form>
 {% endblock %}
