--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -1,14 +1,16 @@
 {% load buttons %}
 {% load check_show %}
 
-<div class="card bg-light border-secondary shadow mb-3 envcard" data-intro="#container_buttons" >
-  <div class="card-header">
-    <div class="row">
+
+<div class="card bg-light border-secondary shadow mb-3 envcard search" data-intro="#container_buttons" id="{{ container.friendly_name }}">
+  <div class="card-header" style="background-color:initial" onpointerenter="this.setAttribute('style', 'background-color: white')" onpointerleave="this.setAttribute('style', 'background-color: initial')">
+    <div class="row"  style="color: black" onpointerenter="this.setAttribute('style', 'font-weight: bold')" onpointerleave="this.setAttribute('style', 'color: black')">
       <div class="col-1">
 	{% button_start_open_restart container next_page='container:list' %}
       </div>
-      <div class="col-11" data-bs-toggle="collapse" data-bs-target="#collapse-{{ container.id }}" aria-expanded="false" aria-controls="collapse-{{ container.id }}">
-        {{ container.friendly_name }}
+      <div class="col-11" data-bs-toggle="collapse" data-bs-target="#collapse-{{ container.id }}" aria-expanded="false" aria-controls="collapse-{{ container.id }}" style="cursor: pointer;">
+
+	      {{ container.friendly_name }}
         <div class="float-end">
 	  {% container_image container %}
         </div>
