--- a/kooplexhub/container/templates/container_submenu.html
+++ b/kooplexhub/container/templates/container_submenu.html
@@ -1,32 +1,40 @@
 {% load extras %}
+{% block style %}
+<style>
+  @media all and (min-width: 991px) {
+    .go{ display: none; }
+  }
+  
+  </style>
+{% endblock %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSubmenu" 
-	  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <div style="width:150px; height:40px; margin-left:auto; margin-right:auto;" class="badge go bg-secondary dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownContainer" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-intro="#projects" style="color:white; font-weight: bold; width:95%; margin-left:auto; margin-right:auto;">Environments</a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdownContainer">
+      <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#container-new" style="color:black">New container environment</a></li>
+      <li><a {% if submenu == 'list' %} class="nav-link" href="#" {% else %} class="dropdown-item" href="{% url 'container:list' %}" {% endif %} data-intro="#cont-pane" style="color:black">List container environments</a></li>
+      <li><a {% if submenu == 'attachments' %} class="nav-link active" href="#" {% else %} class="dropdown-item" href="{% url 'container:list_attachments' %}" {% endif %} style="color:black">List attachments</a></li>
+    </ul>
+  </div>
   <div class="collapse navbar-collapse" id="navbarSubmenu">
      <div class="col-3">
-       <h5><span class="badge bg-secondary">{{ title }}</span></h5>
-     </div>
+      <div style="margin-left: 30px;"><h5><span class="badge bg-secondary">{{ title }}</span></h5></div>
+    </div>
      <div class="col-8">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" style="margin-left: 110px;" id="shown_containers">
 		{% comment %} FIXME: container -- container {% endcomment %}
           <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#container-new">New container environment</a></li>
           <li class="nav-item"><a {% if submenu == 'list' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'container:list' %}" {% endif %} data-intro="#cont-pane">List container environments</a></li>
           <li class="nav-item"><a {% if submenu == 'attachments' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'container:list_attachments' %}" {% endif %}>List attachments</a></li>
         </ul>
      </div>
-     <div class="col-1">
-      {% if submenu == 'list' %}
-       <div class="d-flex justify-content-end" data-intro="#page-view">
-	  <form action="{% url 'container:set_pagination' %}" method="post">
-		  {% csrf_token %}
-	    <input type="text" name="paginate_by" value="{{ user.profile.paginate_container_list }}" maxlength="3" size="3">
-	  </form>
+     <div class="col-1" style="margin-left: -10px;">
+       <div class="justify-content-end" data-intro="#page-view">
+    <div style="margin-left: 5px; margin-top: 2px">
 	  {% layout_flip user.profile.layout_container_list 'container:layout_flip' %}
+  </div>
        </div>
-      {% endif %}
      </div>
   </div>
 </nav>
