--- a/kooplexhub/education/templates/education_submenu.html
+++ b/kooplexhub/education/templates/education_submenu.html
@@ -1,21 +1,34 @@
+{% block style %}
+<style>
+  @media all and (min-width: 991px) {
+    .go{ display: none; }
+  }
+  
+  </style>
+{% endblock %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSubmenu" 
-	  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <div style="width:150px; height:40px; margin-left:auto; margin-right:auto;" class="badge go bg-secondary dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProject" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-intro="#projects" style="color:white; font-weight: bold; width:80%; margin-left:auto; margin-right:auto;">Education</a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdownProject">
+      <li><a {% if submenu == 'teacher' %} class="nav-link active" href="#" {% else %} class="dropdown-item" href="{% url 'education:teacher' %}" {% endif %} style="color:black">Teaching</a></li>
+      <li><a {% if submenu == 'assignment_teacher' %} class="nav-link active" href="#" {% else %} class="dropdown-item" href="{% url 'education:assignment_teacher' %}" {% endif %} style="color:black">Assignment manager</a></li>
+      <li><a {% if submenu == 'student' %} class="nav-link active" href="#" {% else %} class="dropdown-item" href="{% url 'education:student' %}" {% endif %} style="color:black">Courses</a></li>
+      <li><a {% if submenu == 'assignment_student' %} class="nav-link active" href="#" {% else %} class="dropdown-item" href="{% url 'education:assignment_student' %}" {% endif %} style="color:black">Assignments due</a></li>    
+    </ul>
+  </div>
   <div class="collapse navbar-collapse" id="navbarSubmenu">
-     <div class="col-3">
-       <h5><span class="badge bg-secondary">{{ title }}</span></h5>
-     </div>
-     <div class="col-8">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a {% if submenu == 'teacher' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:teacher' %}" {% endif %}>Teaching</a></li>
+    <div class="col-3">
+      <div style="margin-left: 30px;"><h5><span class="badge bg-secondary">{{ title }}</span></h5></div>
+    </div>
+    <div class="col-8">
+      <ul class="navbar-nav mr-auto" style="margin-left: 110px;">
+        <li class="nav-item"><a {% if submenu == 'teacher' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:teacher' %}" {% endif %}>Teaching</a></li>
 	  <li class="nav-item"><a {% if submenu == 'assignment_teacher' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:assignment_teacher' %}" {% endif %}>Assignment manager</a></li>
           <li class="nav-item"><a {% if submenu == 'student' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:student' %}" {% endif %}>Courses</a></li>
 	  <li class="nav-item"><a {% if submenu == 'assignment_student' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'education:assignment_student' %}" {% endif %}>Assignments due</a></li>
-        </ul>
-     </div>
-     <div class="col-1">
-     </div>
+      </ul>
+    </div>
+    <div class="col-1" />
   </div>
 </nav>
