--- a/kooplexhub/education/templates/menuitem_education.html
+++ b/kooplexhub/education/templates/menuitem_education.html
@@ -1,12 +1,13 @@
+
 {% if user.is_authenticated %}
   <li class="nav-item dropdown {{ active }}">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEdu" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-intro="#edu">Education</a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdownEdu">
   {% if user.profile.is_teacher %}
-      <a class="dropdown-item" href="{% url 'education:teacher' %}">Teaching</a>
+      <a  data-intro="#teaching_area" class="dropdown-item" href="{% url 'education:teacher' %}">Teaching</a>
       <a class="dropdown-item" href="{% url 'education:assignment_teacher' %}">Assignment manager</a>
   {% else %}
-      <a class="dropdown-item disabled" href="#">Teaching</a>
+      <a data-intro="#teaching_area" class="dropdown-item disabled" href="#">Teaching</a>
       <a class="dropdown-item disabled" href="#">Assignment manager</a>
   {% endif %}
       <hr class="dropdown-divider">
