--- a/kooplexhub/education/templates/student_course_list.html
+++ b/kooplexhub/education/templates/student_course_list.html
@@ -1,15 +1,77 @@
 {% extends "layout.html" %}
 
 {% block submenu %}
-  {% include 'education_submenu.html' with title="Courses you attend" submenu="student" %}
+  {% include 'education_submenu.html' with title="Education" submenu="student" %}
 {% endblock %}
+
+
+{% load static %}
+
+{% block chardinhelp %}
+<link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
+<script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
+<script>
+   (function() {
+     $(function() {
+       $('body').chardinJs({
+         'attribute': 'data-intro',
+         url: "{% static 'chardinjs/courses.json' %}"
+       });
+   
+       // or trigger via an anchor tag
+       $('a[data-toggle="chardinjs"]').on('click', function (e) {
+         e.preventDefault();
+         $("div.envcard:first").find(".collapse").addClass('show');
+         return ($('body').data('chardinJs')).toggle();
+       });
+   
+         return $('body').on('chardinJs:stop', function () {
+         //$("div.envcard:first").find(".collapse").removeClass('show');
+
+       });
+
+     });
+   }).call(this);
+</script>
+
+<script>
+  function myFunction() {
+      var input, filter, ul, li, a, i, txtValue;
+      input = document.getElementById("myInput");
+      filter = input.value.toUpperCase();
+      ul = document.getElementById("containerListPane");
+      li = ul.getElementsByTagName("tr");
+      for (i = 0; i < li.length; i++) {
+
+	      if (li[i].hasAttribute("class")) {
+                    a = li[i]; 
+                    atag = li[i].getAttribute("class");   
+                    if (atag.indexOf("search") > -1) {
+                      //console.log(a);
+                      txtValue = a.id;
+                                        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                                            li[i].style.display = "";
+                                        } else {
+                                            li[i].style.display = "none";
+                                        }
+                    }
+                        }
+                        }
+  }
+</script>
+
+
+{% endblock %}
+
+
 
 {% block main_content_right %}
 
+<div data-intro="#course_list">
   {% for ucb in studentcoursebindinglist %}
      {% include 'course_partial_list.html' with next_page='education:student' course=ucb.course coursecontainerbindings=ucb.coursecontainerbindings is_teacher=False tooltip="Submit assignments" %}
   {% endfor %}
-
+</div>
 {% endblock %}
 
 {% comment %}
