--- a/kooplexhub/hub/templates/message.html
+++ b/kooplexhub/hub/templates/message.html
@@ -1,6 +1,17 @@
 {% load extras %}
+<style>
+
+  @media all and (min-width: 1265px) {
+    .message {
+      width: 400px
+}
+
+  }
+
+  </style>
+
 {% if messages or unbound_containers or restart_containers or unbound_projects or due_assignments or unbound_courses or empty_course_groups or ungrouped_course_students %}
- <div class="card shadow p-3 mb-5 bg-light rounded" data-intro="#messages"> 
+ <div class="card shadow mt-3 mb-2 bg-light rounded message" data-intro="#messages"> 
   <div class="card-body">
     <h5 class="card-title">Messages</h5>
     {% if due_assignments %}
