--- a/kooplexhub/project/templates/project_join.html
+++ b/kooplexhub/project/templates/project_join.html
@@ -1,13 +1,47 @@
 {% extends "layout.html" %}
 
+
+
+{% load static %}
+{% load render_table from django_tables2 %}
+
+{% block chardinhelp %}
+<link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
+<script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
+<script>
+   (function() {
+     $(function() {
+       $('body').chardinJs({
+         'attribute': 'data-intro',
+         url: "{% static 'chardinjs/joinproject.json' %}"
+       });
+   
+       // or trigger via an anchor tag
+       $('a[data-toggle="chardinjs"]').on('click', function (e) {
+         e.preventDefault();
+         $("div.envcard:first").find(".collapse").addClass('show');
+         return ($('body').data('chardinJs')).toggle();
+       });
+   
+         return $('body').on('chardinJs:stop', function () {
+         //$("div.envcard:first").find(".collapse").removeClass('show');
+
+       });
+
+     });
+   }).call(this);
+</script>
+
+{% endblock %}
+
+
 {% block submenu %}
-  {% include 'project_submenu.html' with title="Join a collaboration" submenu="join" %}
+  {% include 'project_submenu.html' with title="Projects" submenu="join" %}
 {% endblock %}
 
 {% block main_content_right %}
-  {% load render_table from django_tables2 %}
   
-<div class="card shadow p-3 mb-5 bg-light rounded"> 
+<div class="card shadow mt-3 p-3 mb-5 bg-light rounded" data-intro="#join_project"> 
 <form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
   {% csrf_token %}
     <h5>Use the switch select those projects you want to join</h5>
