--- a/kooplexhub/project/templates/project_partial_card.html
+++ b/kooplexhub/project/templates/project_partial_card.html
@@ -2,7 +2,7 @@
 {% load project_buttons %}
 
 <div class="col">
-  <div class="card text-white bg-primary border-info shadow ">
+  <div class="card text-white bg-primary border-info shadow search" id="{{ project.name }}">
 {% comment %}
     <img src="..." class="card-img-top" alt="...">
 {% endcomment %}
@@ -20,11 +20,13 @@
       <p class="card-text"><strong>Description:</strong> {{ project.description }}</p>
       <p class="card-text">
        <div class="btn-group" role="group">
-	<strong>Info:</strong>
-        {% include 'reports_button.html' %}
-        {% button_collaborator project user %}
-        {% dropdown_start_open_stop bindings=projectcontainerbindings ancestor=project ancestor_type='project' next_page='project:list' %}
-       </div>
+        <p class="card-text"><strong>Info:</strong></p>
+        <div style="display: flex;">
+          <div style="padding-right: 5px">{% include 'reports_button.html' %}</div>
+          <div style="padding-right: 5px">{% button_collaborator project user %}</div>
+          <div style="padding-right: 5px"> {% dropdown_start_open_stop bindings=projectcontainerbindings ancestor=project ancestor_type='project' next_page='project:list' %}</div>
+      </div>
+      </div>
       </p>
     </div>
     <div class="card-footer bg-primary">
