--- a/kooplexhub/education/templates/assignment.html
+++ b/kooplexhub/education/templates/assignment.html
@@ -53,6 +53,9 @@
     <button class="nav-link {% if active_tab == "tab-conf" %}active{% endif %}" id="tab-conf" data-bs-toggle="tab" data-bs-target="#confAssignment" type="button" role="tab" aria-controls="confAssignment" aria-selected="{% if active_tab == "tab-conf" %}true{% else %}false{% endif %}">Configure Assignment</button>
   </li>
   <li class="nav-item" role="presentation">
+    <button class="nav-link {% if active_tab == "tab-handlemass" %}active{% endif %}" id="tab-handlemass" data-bs-toggle="tab" data-bs-target="#AssignmentMass" type="button" role="tab" aria-controls="AssignmentMass" aria-selected="{% if active_tab == "tab-handlemass" %}true{% else %}false{% endif %}">Mass Assignments</button>
+  </li>
+  <li class="nav-item" role="presentation">
     <button class="nav-link {% if active_tab == "tab-handle" %}active{% endif %}" id="tab-handle" data-bs-toggle="tab" data-bs-target="#Assignment" type="button" role="tab" aria-controls="Assignment" aria-selected="{% if active_tab == "tab-handle" %}true{% else %}false{% endif %}">Handle Assignments</button>
   </li>
   <li class="nav-item" role="presentation">
@@ -115,6 +118,24 @@
         {%endif %}
       </div>
       </form>
+    </div>
+  </div>
+
+  {# Mass Assignments #}
+  <div class="tab-pane fade {% if active_tab == "tab-handlemass" %}show active{% endif %}" id="AssignmentMass" role="tabpanel" aria-labelledby="tab-handlemass">
+    <div class="mt-3">
+      <h5>Mass operation</h5>
+      {% if t_mass_all %}
+        <form id='assignment-form-mass-all' class="row mb-3 mt-3" action="{% url 'education:handle_mass_many' %}" method="post">
+          {% csrf_token %}
+          {% render_table t_mass_all %}
+          <div style="justify-content: end;">
+            {% include 'apply_cancel.html' with hide_cancel=True %}
+          </div>
+        </form>
+      {% else %}
+        <div class="alert alert-warning">You do not hane any assignments defined yet.</div>
+      {% endif %}
     </div>
   </div>
 
